--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,5 +1,5 @@
 {
   "rewrites": [
-    { "source": "/api/:path*", "destination": "https://api.cloudandcapital.com/api/:path*" }
+    { "source": "/api/:path*", "destination": "https://cloud-cost-guard.onrender.com/api/:path*" }
   ]
 }
