--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,8 +3,12 @@
   "version": "0.1.0",
   "private": true,
 
+  "engines": { "node": "20.x" },
+
   "overrides": {
-    "date-fns": "^3.6.0"
+    "date-fns": "^3.6.0",
+    "ajv": "6.12.6",
+    "ajv-keywords": "3.5.2"
   },
 
   "dependencies": {
