--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,9 @@
   "overrides": {
     "date-fns": "^3.6.0",
     "ajv": "6.12.6",
-    "ajv-keywords": "3.5.2"
+    "ajv-keywords": "3.5.2",
+    "schema-utils": "3.3.0",
+    "terser-webpack-plugin": "5.3.10"
   },
 
   "dependencies": {
@@ -90,3 +92,4 @@
 
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
+
