--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,17 +1,10 @@
+
 {
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
 
-  "engines": { "node": "20.x" },
-
-  "overrides": {
-    "date-fns": "^3.6.0",
-    "ajv": "6.12.6",
-    "ajv-keywords": "3.5.2",
-    "schema-utils": "3.3.0",
-    "terser-webpack-plugin": "5.3.10"
-  },
+  "engines": { "node": "18.x" },
 
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
@@ -53,6 +46,7 @@
     "lucide-react": "^0.507.0",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
+    "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.2",
     "react-resizable-panels": "^3.0.1",
@@ -92,4 +86,3 @@
 
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
-
