--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,10 +1,9 @@
-
 {
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
 
-  "engines": { "node": "18.x" },
+  "engines": { "node": "20.x" },
 
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
@@ -35,6 +34,8 @@
     "@radix-ui/react-toggle": "^1.1.6",
     "@radix-ui/react-toggle-group": "^1.1.7",
     "@radix-ui/react-tooltip": "^1.2.4",
+    "ajv": "^8.12.0",
+    "ajv-formats": "^2.1.1",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -82,7 +83,6 @@
     "globals": "15.15.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17"
-  },
-
-  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
+  }
 }
+
