--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,5 +1,12 @@
 {
   "rewrites": [
-    { "source": "/api/:path*", "destination": "https://cloudcostguard.preview.emergentagent.com/api/:path*" }
+    {
+      "source": "/api/(.*)",
+      "destination": "https://cloudcostguard.preview.emergentagent.com/api/$1"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/"
+    }
   ]
 }
