--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,7 +1,10 @@
 {
   "cleanUrls": true,
-  "rewrites": [
-    { "source": "/api/(.*)", "destination": "/api/$1" },
-    { "source": "/(.*)", "destination": "/" }
-  ]
+  "routes": [
+    { "handle": "filesystem" },
+    { "src": "/(.*)", "dest": "/" }
+  ],
+  "functions": {
+    "api/**.js": { "runtime": "nodejs20.x" }
+  }
 }
