--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -4,7 +4,5 @@
     { "handle": "filesystem" },
     { "src": "/(.*)", "dest": "/" }
   ],
-  "functions": {
-    "api/**.js": { "runtime": "nodejs20.x" }
-  }
+  "functions": { "api/**.js": { "runtime": "nodejs20.x" } }
 }
