--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,7 +1,10 @@
 {
-  "version": 2,
   "rewrites": [
-    { "source": "/api/(.*)", "destination": "/api/$1" },
-    { "source": "/(.*)", "destination": "/" }
-  ]
+    { "source": "/api/(.*)", "destination": "https://api.cloudandcapital.com/api/$1" }
+  ],
+  "functions": {
+    "api/findings.js": {
+      "includeFiles": "data/findings.seed.json"
+    }
+  }
 }
