--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,5 +1,11 @@
 {
   "rewrites": [
-    { "source": "/api/(.*)", "destination": "https://api.cloudandcapital.com/api/$1" }
+    { "source": "/api/summary",            "destination": "https://api.cloudandcapital.com/api/summary" },
+    { "source": "/api/cost-trend",         "destination": "https://api.cloudandcapital.com/api/cost-trend" },
+    { "source": "/api/service-breakdown",  "destination": "https://api.cloudandcapital.com/api/service-breakdown" },
+    { "source": "/api/top-movers",         "destination": "https://api.cloudandcapital.com/api/top-movers" },
+    { "source": "/api/key-insights",       "destination": "https://api.cloudandcapital.com/api/key-insights" },
+    { "source": "/api/products",           "destination": "https://api.cloudandcapital.com/api/products" },
+    { "source": "/api/movers",             "destination": "https://api.cloudandcapital.com/api/movers" }
   ]
 }
