--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,11 +13,35 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Use Node.js 20
+      - name: Show repo root
+        run: |
+          pwd
+          ls -la
+
+      - name: Locate package.json
+        run: |
+          if [ -f package.json ]; then
+            echo "PKG_DIR=." >> $GITHUB_ENV
+          elif [ -f frontend/package.json ]; then
+            echo "PKG_DIR=frontend" >> $GITHUB_ENV
+          elif [ -f app/package.json ]; then
+            echo "PKG_DIR=app" >> $GITHUB_ENV
+          elif [ -f web/package.json ]; then
+            echo "PKG_DIR=web" >> $GITHUB_ENV
+          else
+            echo "package.json not found in repo root or common subfolders." >&2
+            echo "Tree snapshot:"
+            ls -la
+            exit 1
+          fi
+          echo "Using PKG_DIR=$(cat $GITHUB_ENV | grep PKG_DIR | tail -n1 | cut -d'=' -f2)"
+
+      - name: Use Node.js 20 (with npm cache)
         uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: npm
+          cache-dependency-path: ${{ env.PKG_DIR }}/package-lock.json
 
       - name: Show versions
         run: |
@@ -28,6 +52,7 @@ jobs:
         run: npm cache clean --force
 
       - name: Install deps (ci with fallback)
+        working-directory: ${{ env.PKG_DIR }}
         run: |
           if [ -f package-lock.json ]; then
             npm ci --no-audit --no-fund || npm install --no-audit --no-fund
@@ -38,16 +63,15 @@ jobs:
           NPM_CONFIG_LEGACY_PEER_DEPS: true
 
       - name: Lint (if present)
+        working-directory: ${{ env.PKG_DIR }}
         run: npm run lint --if-present
 
       - name: Build (verbose, tolerant)
+        working-directory: ${{ env.PKG_DIR }}
         env:
-          # Avoid failing on warnings in CRA/CRACO
-          CI: "false"
-          # Skip CRA's eslint plugin (compile still runs)
-          DISABLE_ESLINT_PLUGIN: "true"
-          # Give Node a bit more memory
+          CI: "false"                      # don't fail on warnings
+          DISABLE_ESLINT_PLUGIN: "true"    # skip CRA eslint plugin
           NODE_OPTIONS: --max_old_space_size=4096
         run: |
-          echo "Starting build..."
+          echo "Building in $PWD ..."
           npm run build --loglevel verbose
